<resources>
    <string name="app_name">S2 Event Sample</string>

    <string name="kakao_app_key">0886eae54c2f984ec142ab340e68e53b</string>
    <string name="beta_kakao_app_key">da4271119e69b289aace2bca05735d26</string>
    <string name="sandbox_kakao_app_key">c8186b26d1ed1e62346c3aafbc565cd3</string>
    <string name="alpha_kakao_app_key">185809aabf34c868ede09122d9e70f2b</string>

    <string name="text_activity1">Activity 1</string>
    <string name="text_activity2">Activity 2</string>
    <string name="text_activity3">Activity 3</string>
    <string name="text_settings">Settings</string>

    <string name="events_publish_multiple">Publish multiple events</string>

    <string name="text_events_activity1">Activity1 Event Tracking</string>
    <string name="text_events_activity2">Activity2 Event Tracking</string>
    <string name="text_events_activity3">Activity3 Event Tracking</string>
</resources>
